<resources>
    <string name="app_name">Push Notification</string>
    <string name="app_url">www.mbaas.ir</string>

    <string name="contact_tab_title">تماس با ما</string>
    <string name="help_tab_title">آموزش</string>
    <string name="intro_tab_title">MBaaS</string>
    <string name="report_tab_title">گزارشات</string>
    <string name="mbaas_title">زیرساخت برنامه‌های موبایل</string>
    <string name="mbaas_email_title">ایمیل:</string>
    <string name="mbaas_email">info@mbaas.ir</string>
    <string name="mbaas_tel_title">تلفن:</string>
    <string name="mbaas_tel">021-77511608</string>
    <string name="what_is_push">اعلان‌های موبایل چیست؟</string>
    <string name="received_pns">گزارش اعلان‌های دریافتی</string>
    <string name="user_info">اطلاعات کاربر</string>
    <string name="first_name">نام</string>
    <string name="last_name">نام خانوادگی</string>
    <string name="phone_number">شماره تلفن</string>
    <string name="version">نسخه %1$s</string>

    <string name="phone_state">وضعیت تلفن</string>
    <string name="write_external_storage">نوشتن در حافظه خارجی</string>
    <string name="grant_access">جهت استفاده از این برنامه باید مجوز دسترسی به %1$s را بدهید.</string>

    <string name="mbaas_successfull_registration">شناسه در MBaaS ثبت شد.</string>
    <string name="mbaas_registration_failed">شناسه در MBaaS ثبت نشد.</string>
    <string name="mbaas_successfull_gcm_registration">شناسه از گوگل دریافت شد.</string>
    <string name="mbaas_successfull_new_gcm_registration">شناسه جدید از گوگل دریافت شد.</string>
    <string name="mbaas_google_play_service_unavailable">Google play service is unavailable.</string>
    <string name="test_news_api">تست API اخبار</string>
    <string name="ok">تائید</string>
    <string name="cancel">انصراف</string>

    <string-array name="rss_group">
        <item>انتخاب کنید</item>
        <item>همه</item>
        <item>سیاسی</item>
        <item>بین المللی</item>
        <item>ورزشی</item>
        <item>اجتماعی</item>
        <item>اقتصادی</item>
        <item>فضای مجازی</item>
        <item>فرهنگی</item>
        <item>پزشکی</item>
        <item>فیلم</item>
    </string-array>

    <string-array name="content_source">
        <item>انتخاب کنید</item>
        <item>خبرگزاری جوان</item>
    </string-array>
</resources>
